--- a/index.Rmd
+++ b/index.Rmd
@@ -226,14 +226,14 @@ Looking again at our data set below, we can immediately see that each variable--
 can_lang
 ```
 
-Before we create the plot, we first need to determine what five languages people report speaking as their primary language spoken at home. We will use the `slice_max()` function, where we specify the data frame, the number of rows, and the variable to order by.
+Before we create the plot, we first need to determine what are the top five languages people report speaking as their primary language spoken at home. We will use the `slice_max()` function, where we specify the data frame, the number of rows, and the variable to order by.
 ```{r}
 can_lang_top <- slice_max(can_lang, n = 5, order_by = most_at_home)
 can_lang_top
 ```
-We will begin with a bar plot of the `most_at_home` column from our data frame. To create a bar plot of these two variables using the `ggplot` function, we would the following: 
+We will begin with a bar plot using the `most_at_home` and `language` columns from our data frame. To create a bar plot of these two variables using the `ggplot` function, we would the following: 
 
-```{r img-ggplot, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Creating a scatter plot with the ggplot function", out.width="1100", fig.retina = 2}
+```{r img-ggplot, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Creating a bar plot with the ggplot function", out.width="1100", fig.retina = 2}
 knitr::include_graphics("img/function_ggplot.jpeg")
 ```
 
@@ -253,9 +253,9 @@ ggplot(can_lang_top, aes(x = language, y = most_at_home)) +
 
 ### Formatting ggplot objects
 
-It is exciting that we can already visualize our data to help answer our question, but we are not done yet! We can (and should) do more to improve the interpretability of the data visualization that we created. For example, by default, R uses the column names as the axis labels. However, usually, these column names do not have enough information about the variable in the column. We really should replace this default with a more informative label. For the example above, R uses the column name `mother_tongue` as the label for the y-axis, but most people will not know what that is. And even if they did, they will not know how we measure mother tongue, nor which group of people the measurements were taken. An axis label that reads "Mother tongue (number of Canadian residents)" would be much more informative.
+It is exciting that we can already visualize our data to help answer our question, but we are not done yet! We can (and should) do more to improve the interpretability of the data visualization that we created. For example, by default, R uses the column names as the axis labels. However, usually, these column names do not have enough information about the variable in the column. We really should replace this default with a more informative label. For the example above, R uses the column name `most_at_home` as the label for the y-axis, but most people will not know what that is. And even if they did, they will not know how we measure this variable, nor which group of people the measurements were taken. An axis label that reads "Number of Canadians reporting their primary language at home" would be much more informative.
 
-Adding additional layers to our visualizations that we create in `ggplot` is one common and easy way to improve and refine our data visualizations. New layers are added to `ggplot` objects using the `+` symbol. For example, we can use the `xlab` and `ylab` functions to add layers where we specify meaningful and informative labels for the x and y axes. Again, since we are specifying words (e.g. `"Mother tongue (number of Canadian residents)"`) as arguments to `xlab` and `ylab`, we surround them with double quotes. We can add many more layers to format the plot further, and we will explore these in later chapters.
+Adding additional layers to our visualizations that we create in `ggplot` is one common and easy way to improve and refine our data visualizations. New layers are added to `ggplot` objects using the `+` symbol. For example, we can use the `xlab` and `ylab` functions to add layers where we specify meaningful and informative labels for the x and y axes. Again, since we are specifying words (e.g. `"Number of Canadians reporting their primary language at home"`) as arguments to `xlab` and `ylab`, we surround them with double quotes. We can add many more layers to format the plot further, and we will explore these in later chapters.
 
 ```{r mother-tongue-vs-most-at-home-labs, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with x and y labels"}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
