changed all scatterplot to bar plots, changed the text to match, updated ggplot_img

--- a/index.Rmd
+++ b/index.Rmd
@@ -43,7 +43,7 @@ can_lang <- readr::read_csv("https://github.com/ttimbers/canlang/raw/master/inst
 # R and the tidyverse
 ## Overview
 
-This textbook aims to introduce readers to data science. In this book, we define *data science* as the study and development of reproducible, auditable processes to obtain value (i.e., insight) from data. At a high level, in this book, readers will learn how to (1) use reproducible tools to do data analysis and (2) identify and solve common problems in data science. The book is structured, so learners spend the first four chapters learning how to use the R programming language to load, wrangle, clean, and visualize data while answering descriptive and exploratory data analysis questions. The following six chapters illustrate how to solve common problems in data science, which help answer predictive and inferential data analysis questions. In the final chapter, we discuss how to set up your own computer with tools like R and Jupyter. For readers who need help setting up their system on their computer, we recommend starting with the [Setting up your own computer] chapter before reading chapter 2. Figure \@ref(fig:img-chapter-overview) summarizes a data science pipeline and what you will learn in each chapter of this book.
+This textbook aims to be an approachable introduction to the world of data science. In this book, we define *data science* as the study and development of reproducible, auditable processes to obtain value (i.e., insight) from data. At a high level, in this book, readers will learn how to (1) use reproducible tools to do data analysis and (2) identify and solve common problems in data science. The book is structured, so learners spend the first four chapters learning how to use the R programming language to load, wrangle, clean, and visualize data while answering descriptive and exploratory data analysis questions. The following six chapters illustrate how to solve common problems in data science, which help answer predictive and inferential data analysis questions. In the final chapter, we discuss how to set up your own computer with tools like R and Jupyter. For readers who need help setting up their system on their computer, we recommend starting with the [Setting up your own computer] chapter before reading chapter 2. Figure \@ref(fig:img-chapter-overview) summarizes a data science pipeline and what you will learn in each chapter of this book.
 
 ```{r img-chapter-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Where are we going?", out.width="1050", fig.retina = 2}
 knitr::include_graphics("img/chapter_overview.jpeg")
@@ -144,7 +144,7 @@ Let's now use the assignment symbol to give the name `can_lang` to the language 
 can_lang <- read_csv("data/can_lang.csv")
 ```
 
-Wait a minute! Nothing happened this time! Or at least it looks like that. But actually, something did happen: the data was read in and now has the name `can_lang` associated with it. And we can use that name to access the data frame and do things with it. We can type the name of the data frame to print it to the screen.
+Wait a minute! Nothing happened this time! Or at least it looks like that. But actually, something did happen: the data was read in and now has the name `can_lang` associated with it. And we can use that name to access the data frame and do things with it. We can type the name of the data frame to print the first few rows on the screen.
 
 
 ```{r print}
@@ -159,10 +159,6 @@ Now, we are going to learn how to obtain subsets of data from a data frame in R 
 The `select` function allows you to create a subset of the columns of a data frame, while the `filter` function allows you to obtain a subset of the rows with specific values.
 
 Before we start using `select` and `filter`, let's take a look at the language data collected in the 2016 Canadian census again to familiarize ourselves with it. 
-
-> **A note about the *data* in data science!** 
-> Data science cannot be done without a deep understanding of the data and problem domain. In this book, we have simplified the data sets used in our examples to concentrate on concepts. In real life, we cannot and should not do data science without a domain expert. Alternatively, it is common to practice data science in your domain of expertise! Remember that when we work with data, it is essential to think about *how* the data were collected, which affects the conclusions we can draw. If your data are biased, then your results will be biased!
-We will do this by printing the data we loaded earlier in the chapter to the screen. 
 
 ```{r print_data_again}
 can_lang
@@ -179,6 +175,11 @@ and 6 columns:
 5. `most_at_work`: Total count of Canadians from the Census who reported the language as used most often at work for the population.
 6. `lang_known`: Total count of Canadians from the Census who reported knowledge of language for the population in private households.
 
+
+> **A note about the *data* in data science!** 
+> Data science cannot be done without a deep understanding of the data and problem domain. In this book, we have simplified the data sets used in our examples to concentrate on concepts. In real life, we cannot and should not do data science without a domain expert. Alternatively, it is common to practice data science in your domain of expertise! Remember that when we work with data, it is essential to think about *how* the data were collected, which affects the conclusions we can draw. If your data are biased, then your results will be biased!
+We will do this by printing the data we loaded earlier in the chapter to the screen. 
+
 Now let's use `select` to extract the language column from this data frame. To do this, we need to provide the `select` function with two arguments. The first argument is the 
 name of the data frame object, which in this example is `can_lang`. The second argument is the column name that we want to select, here `language`. After passing these two arguments,
 the  `select` function returns a single column (the `language` column that we asked for) as a data frame.
@@ -192,30 +193,19 @@ language_column
 
 ### Using `filter` to extract a single row
 
-We can use the `filter` function to obtain the subset of rows with desired values from a data frame. Again, our first argument is the name of the data frame object, `can_lang`. 
-The second argument is a logical statement to use when filtering the rows. Here, for example, we'll say that we are interested in rows where the language is Mandarin. To make this comparison, we use the *equivalency operator* `==` to compare the values of the `language` column with the value `"Mandarin"`. Similar to when we loaded the data file and put quotes around the filename, here we need to put quotes around `"Mandarin"` to tell R that this is a character value and not one of the special words that make up R programming language, nor one of the names 
+We can use the `filter` function to obtain the subset of rows with desired values from a data frame. Again, our first argument is the name of the data frame object, `can_lang`. The second argument is a logical statement to use when filtering the rows. Here, for example, we'll say that we are interested in rows where the higher-level category is Aboriginal languages. To make this comparison, we use the *equivalency operator* `==` to compare the values of the `category` column with the value `"Aboriginal languages"`. Similar to when we loaded the data file and put quotes around the filename, here we need to put quotes around `"Aboriginal languages"` to tell R that this is a character value and not one of the special words that make up R programming language, nor one of the names 
 we have given to data frames in the code we have already written.
 
 With these arguments, `filter` returns a data frame that has all the columns of the input data frame but only the rows we asked for in our logical filter statement. 
 
 ```{r}
-mandarin <- filter(can_lang, language == "Mandarin")
-mandarin
-```
-
-### Using `filter` to extract rows with values above or below a threshold
-
-
-If we are interested in finding information about the languages who have a higher number of people who primarily speak it at home compared to Mandarin---which is reported to have 462890 people speaking it as the primary language they speak in their home---then we can create a filter to obtain rows where the value of `most_at_home` is greater than 462890. In this case, we see that `filter` returns a data frame with 2 rows; this indicates that there are two languages that are spoken more often at home compared to Mandarin.
-
-```{r}
-spoke_often_at_home <- filter(can_lang, most_at_home > 462890)
-spoke_often_at_home
+aboriginal_lang <- filter(can_lang, category == "Aboriginal languages")
+aboriginal_lang
 ```
 
 
 ## Exploring data with visualizations
-Creating effective data visualizations is an essential piece to any data analysis. For the remainder of Chapter 1, we will learn how to use functions from the `tidyverse` package to make visualizations that let us explore relationships in data. We will develop a visualization of the language data collected in the 2016 Canadian census we've been working with that will help us understand potential relationships in the data. We will explore what are the top five languages people report speaking as their primary language spoken at home. This is an example of an exploratory data analysis question because we are looking at patterns within the data set we have but are not trying to generalize what we find beyond this data set.  
+Creating effective data visualizations is an essential piece to any data analysis. For the remainder of Chapter 1, we will learn how to use functions from the `tidyverse` package to make visualizations that let us explore relationships in the data. We will develop a visualization of the language data collected in the 2016 Canadian census we’ve been working with to help us understand what ten Aboriginal languages were most often reported in 2016 as mother tongues in Canada and how many people speak each of them? This question is an example of an exploratory data analysis question: we are looking for relationships and patterns within the data set we have but are not trying to generalize what we find beyond this data set.
 
 ### Using `ggplot` to create a bar plot
 
@@ -226,21 +216,23 @@ Looking again at our data set below, we can immediately see that each variable--
 can_lang
 ```
 
-Before we create the plot, we first need to determine what are the top five languages people report speaking as their primary language spoken at home. We will use the `slice_max()` function, where we specify the data frame, the number of rows, and the variable to order by.
+To answer our data analysis question, we will begin by using the `slice_max` function, which selects rows with the highest values of a variable. Here we want to choose the top ten Aboriginal languages reported as a mother tongue language. In the function, we need to pass the data frame, the number of rows to select, and the variable to order by. 
+
 ```{r}
-can_lang_top <- slice_max(can_lang, n = 5, order_by = most_at_home)
-can_lang_top
+top_lang <- slice_max(aboriginal_lang, n = 10, order_by = mother_tongue)
+top_lang
 ```
-We will begin with a bar plot using the `most_at_home` and `language` columns from our data frame. To create a bar plot of these two variables using the `ggplot` function, we would the following: 
+
+We will make a bar plot using the `most_at_home` and `language` columns from our `top_lang` data frame. To create a bar plot of these two variables using the `ggplot` function, we would the following: 
 
 ```{r img-ggplot, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Creating a bar plot with the ggplot function", out.width="1100", fig.retina = 2}
-knitr::include_graphics("img/function_ggplot.jpeg")
+knitr::include_graphics("img/ggplot_function.jpeg")
 ```
 
-Below we create a bar plot using the `ggplot` function as shown in figure \@ref(fig:img-ggplot):
+Below we create a bar plot using the `ggplot` function following the instructions described in figure \@ref(fig:img-ggplot):
 
-```{r bar-most-at-home, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Bar plot of number of Canadians reporting a language as their primary language at home"}
-ggplot(can_lang_top, aes(x = language, y = most_at_home)) +
+```{r barplot-mother-tongue, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Bar plot of number of Canadians reporting a language as their mother tongue"}
+ggplot(top_lang, aes(x = language, y = mother_tongue)) +
   geom_bar(stat = "identity")
 ```
 
@@ -253,45 +245,41 @@ ggplot(can_lang_top, aes(x = language, y = most_at_home)) +
 
 ### Formatting ggplot objects
 
-It is exciting that we can already visualize our data to help answer our question, but we are not done yet! We can (and should) do more to improve the interpretability of the data visualization that we created. For example, by default, R uses the column names as the axis labels. However, usually, these column names do not have enough information about the variable in the column. We really should replace this default with a more informative label. For the example above, R uses the column name `most_at_home` as the label for the y-axis, but most people will not know what that is. And even if they did, they will not know how we measure this variable, nor which group of people the measurements were taken. An axis label that reads "Number of Canadians reporting their primary language at home" would be much more informative.
+It is exciting that we can already visualize our data to help answer our question, but we are not done yet! We can (and should) do more to improve the interpretability of the data visualization that we created. For example, by default, R uses the column names as the axis labels. However, usually, these column names do not have enough information about the variable in the column. We really should replace this default with a more informative label. For the example above, R uses the column name `mother_tongue` as the label for the y-axis, but most people will not know what that is. And even if they did, they will not know how we measure this variable, nor which group of people the measurements were taken. An axis label that reads "Mother tongue (Number of Canadians residents)" would be much more informative.
 
-Adding additional layers to our visualizations that we create in `ggplot` is one common and easy way to improve and refine our data visualizations. New layers are added to `ggplot` objects using the `+` symbol. For example, we can use the `xlab` and `ylab` functions to add layers where we specify meaningful and informative labels for the x and y axes. Again, since we are specifying words (e.g. `"Number of Canadians reporting their primary language at home"`) as arguments to `xlab` and `ylab`, we surround them with double quotes. We can add many more layers to format the plot further, and we will explore these in later chapters.
+Adding additional layers to our visualizations that we create in `ggplot` is one common and easy way to improve and refine our data visualizations. New layers are added to `ggplot` objects using the `+` symbol. For example, we can use the `xlab` and `ylab` functions to add layers where we specify meaningful and informative labels for the x and y axes. Again, since we are specifying words (e.g. `"Mother tongue (Number of Canadians residents)"`) as arguments to `xlab` and `ylab`, we surround them with double quotes. We can add many more layers to format the plot further, and we will explore these in later chapters.
 
-```{r mother-tongue-vs-most-at-home-labs, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with x and y labels"}
-ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
-  geom_point() +
-  xlab("Language spoken most at home (number of Canadian residents)") +
-  ylab("Mother tongue (number of Canadian residents)")
-
-ggplot(spoke_often_at_home, aes(x = language, y = most_at_home)) +
+```{r barplot-mother-tongue-labs, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Bar plot of number of Canadians reporting a language as their mother tongue with x and y labels"}
+ggplot(top_lang, aes(x = language, y = mother_tongue)) +
   geom_bar(stat = "identity") + 
    xlab("Language") + 
-   ylab("Number of Canadians reporting their primary language at home")
+   ylab("Mother tongue (Number of Canadians residents)")
 ```
 
-In figure \@ref(fig:mother-tongue-vs-most-at-home-labs), most of the 214 observations in this data set are bunched up in the lower left-hand side of this visualization because many people in Canada speak the two official languages (English and French). Thus to answer our question, we will need to adjust the scale of the x and y axes so that they are on a log scale.
+In figure \@ref(fig:barplot-mother-tongue-labs), the x labels overlap, making it challenging to read the different languages. One solution is to rotate the plot, so the bars are horizontal, and thus the labels will be more readable. We can again add additional layers to the plot object using the `+` symbol to add the `coord_flip` function, which swaps the x and y coordinate axes:
 
-We can again add additional layers to the plot object using the `+` symbol to do this:
-
-```{r mother-tongue-vs-most-at-home-scale, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with log adjusted x and y axes"}
-ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
-  geom_point() +
-  xlab("Language spoken most at home (number of Canadian residents)") +
-  ylab("Mother tongue (number of Canadian residents)") +
-  scale_x_log10(labels = scales::comma) +
-  scale_y_log10(labels = scales::comma)
-
-ggplot(spoke_often_at_home, aes(x = language, y = most_at_home)) +
+```{r barplot-mother-tongue-flipped, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Horizontal bar plot of number of Canadians reporting a language as their mother tongue"}
+ggplot(top_lang, aes(x = language, y = mother_tongue)) +
   geom_bar(stat = "identity") + 
-   xlab("Language") +  
-   scale_y_continuous(name = "Number of Canadians reporting their primary language at home",
-                      labels = scales::comma
-)
+   xlab("Language") + 
+   ylab("Mother tongue (Number of Canadians residents)") + 
+  coord_flip()
 ```
 
-From figure \@ref(fig:mother-tongue-vs-most-at-home-scale), we see that for the 214 languages in this data set, as the number of people who have a language as their mother tongue increases, so does the number of people who speak that language at home. When we see 
-two variables do this, we call this a *positive relationship*. Because the points are fairly close together, we can say that the relationship is strong. Because drawing a straight line through these 
-points would fit the pattern we observe quite well, we say that it's linear.
+
+From figure \@ref(fig:barplot-mother-tongue-flipped), we can see the ten Aboriginal languages that were most often reported in 2016 as mother tongues in Canada and how many people speak each of them. However, our visualization could be made more transparent by organizing the bars according to the number of Canadian residents reporting each language rather than in alphabetical order. We can reorder the bars using the `reorder` function, which orders a variable (here `language`) based on the values of the second variable (`mother_tongue`):
+
+```{r barplot-mother-tongue-reorder, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Bar plot of number of Canadians reporting a language as their mother tongue with bars reordered"}
+ggplot(top_lang, aes(x = reorder(language, mother_tongue), y = mother_tongue)) +
+  geom_bar(stat = "identity") + 
+   xlab("Language") + 
+   ylab("Mother tongue (Number of Canadians residents)") + 
+  coord_flip()
+```
+
+From figure \@ref(fig:barplot-mother-tongue-reorder), we can clearly see what the top ten most often reported Aboriginal languages were according to the 2016 Candian census. The Aboriginal language most often reported were the Cree languages with over 60,000 Canadian residents reporting it as their mother tongue. 
+
+> "Cree n.o.s." means "Cree not otherwise specified", which refers to individuals who reported "Cree" as their mother tongue. Statistics Canada () indicates that Cree languages include the following categories: Cree n.o.s., Swampy Cree, Plains Cree, Woods Cree, and a 'Cree not included elsewhere' category (which includes Moose Cree, Northern East Cree and Southern East Cree). 
 
 Learning how to describe data visualizations is a very useful skill. We will provide descriptions for you in this course (as we did above) until we get to Chapter 4, which focuses on data visualization. Then, we will explicitly teach you how to do this yourself and not over-state or over-interpret the results from a visualization.
 
@@ -304,21 +292,19 @@ library(tidyverse)
 
 can_lang <- read_csv("data/can_lang.csv")
 
-can_lang <- mutate(can_lang, mother_tongue = mother_tongue / 35151728)
-can_lang <- mutate(can_lang, most_at_home = most_at_home / 35151728)
+aboriginal_lang <- filter(can_lang, category == "Aboriginal languages")
 
-ggplot(can_lang, aes(
-  x = most_at_home,
-  y = mother_tongue,
-  colour = category,
-  shape = category
-)) + # map categories to different shapes
-  geom_point(alpha = 0.6) + # set the transparency of the points
-  scale_color_manual(values = c("deepskyblue2", "firebrick1", "black")) + # choose point colours
-  xlab("Language spoken most at home (proportion of Canadian residents)") +
-  ylab("Mother tongue (proportion of Canadian residents)") +
-  scale_x_log10(labels = scales::comma) +
-  scale_y_log10(labels = scales::comma) +
+top_lang <- slice_max(aboriginal_lang, n = 10, order_by = mother_tongue)
+
+ggplot(top_lang, aes(
+  x = reorder(language, mother_tongue), 
+  y = mother_tongue)) +
+  geom_bar(stat = "identity", fill = "steelblue") + 
+   xlab("Language") + 
+   ylab("Mother tongue (Number of Canadians residents)") + 
+  coord_flip() + 
   theme_bw() # use a theme to have a white background
+
 ```
-This exercise demonstrates the power of R. In relatively few lines of code, we performed an entire data science workflow with a highly effective data visualization! We asked a question, read the data into R, wrangled the data (using `mutate`) and created a data visualization to help answer our question.  In this chapter, you got a quick taste of the data science workflow, but we will learn each of these steps in more detail in the coming chapters! 
+
+This exercise demonstrates the power of R. In relatively few lines of code, we performed an entire data science workflow with a highly effective data visualization! We asked a question, read the data into R, wrangled the data (using `filter` and `slice_max`) and created a data visualization to help answer our question.  In this chapter, you got a quick taste of the data science workflow, but we will learn each of these steps in more detail in the coming chapters! 
