added select, filter to wrangling chapter

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -376,7 +376,7 @@ mandarin <- filter(can_lang, language == "Mandarin")
 mandarin
 ```
 
-### Using `filter` to extract rows with values above a threshold
+### Using `filter` to extract rows with values above or below a threshold
 
 
 If we are interested in finding information about the languages who have a higher number of people who primarily speak it at home compared to Mandarin---which is reported to have 462890 people speaking it as the primary language they speak in their home---then we can create a filter 
