edited last paragraph

--- a/index.Rmd
+++ b/index.Rmd
@@ -285,7 +285,7 @@ Learning how to describe data visualizations is a very useful skill. We will pro
 
 ### Putting it all together
 
-In the code chunk below, we put everything from this chapter together. We have added a few more layers to make the data visualization even more effective. Specifically, we have improved the visualization's accessibility by choosing colours that are easier to distinguish. We also mapped category to shape, handled the overlapping data points by making them slightly transparent, and changed the background from grey to white to improve the contrast. 
+In the code chunk below, we put everything from this chapter together. We have added a few more layers to make the data visualization even more effective. Specifically, we changed the colour of the bars and changed the background from grey to white to improve the contrast. 
 
 ```{r nachos-to-cheesecake, fig.width=7.75, fig.height=4, warning=FALSE, message=FALSE, fig.cap = "Putting it all together: Scatter plot of proportion of Canadians reporting a language as their mother tongue vs the primary language at home coloured by language category"}
 library(tidyverse)
