--- a/index.Rmd
+++ b/index.Rmd
@@ -279,7 +279,7 @@ ggplot(top_lang, aes(x = reorder(language, mother_tongue), y = mother_tongue)) +
 
 From figure \@ref(fig:barplot-mother-tongue-reorder), we can clearly see what the top ten most often reported Aboriginal languages were according to the 2016 Candian census. The Aboriginal language most often reported were the Cree languages with over 60,000 Canadian residents reporting it as their mother tongue. 
 
-> "Cree n.o.s." means "Cree not otherwise specified", which refers to individuals who reported "Cree" as their mother tongue. Statistics Canada () indicates that Cree languages include the following categories: Cree n.o.s., Swampy Cree, Plains Cree, Woods Cree, and a 'Cree not included elsewhere' category (which includes Moose Cree, Northern East Cree and Southern East Cree). 
+> "n.o.s." means "not otherwise specified", so Cree n.o.s. refers to individuals who reported Cree as their mother tongue. In this data set, the Cree languages include the following categories: Cree n.o.s., Swampy Cree, Plains Cree, Woods Cree, and a 'Cree not included elsewhere' category (which includes Moose Cree, Northern East Cree and Southern East Cree)  [@language2018]. 
 
 Learning how to describe data visualizations is a very useful skill. We will provide descriptions for you in this course (as we did above) until we get to Chapter 4, which focuses on data visualization. Then, we will explicitly teach you how to do this yourself and not over-state or over-interpret the results from a visualization.
 
